--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=post-service
 spring.datasource.url=jdbc:mysql://localhost:3306/scPostService
 spring.datasource.username=root
 spring.datasource.password=4703
+server.port=8081
